test/fail/integration/_fail_grammar_io_actions_3.hs
main = do
             print "Hello"
             let